--- a/style.css
+++ b/style.css
@@ -67,31 +67,39 @@ button.startButton {
   border: 10px solid black;
   font-size: calc(var(--gameAreaWidth) * 0.06);
   box-shadow: 0 0 0 0 transparent;
+  cursor: pointer;
 }
 
 button.startButton:hover,
 button.startButton:focus {
-  animation: box-shadow 0.5s;
+  transition: box-shadow 0.5s;
   box-shadow: 1px 1px 20px black;
 }
 
-@keyframes box-shadow {
-  0% {
-    box-shadow: none;
-  }
-}
-
 .card {
-  background-color: skyblue;
+  box-sizing: border-box;
+  background-color: transparent;
   height: var(--cardHeight);
   width: var(--cardWidth);
-  border: 1px solid black;
+  border: 10px solid black;
+  border-radius: 20px;
   background-repeat: no-repeat;
   background-position: center;
 }
 
+.card:hover {
+  height: calc(var(--cardHeight) * 1.01);
+  width: calc(var(--cardWidth) * 1.01);
+  cursor: pointer;
+}
+
 .card.hide {
   background: linear-gradient(#e66465, #9198e5);
+}
+
+.fade {
+  transition: opacity 1s;
+  opacity: 0;
 }
 
 /* icons */
