--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ button.startButton:focus {
 }
 
 .card.hide {
-  background: linear-gradient(#e66465, #9198e5);
+  background: linear-gradient(#CCFFFF, #FFCCFF);
 }
 
 .fade {
